--- a/1a,b,c,d,e,g.html
+++ b/1a,b,c,d,e,g.html
@@ -17,7 +17,7 @@
         <p>Aujourd'hui, je suis allé à l'épicerie acheter des œufs et des légumes.</p>
     </div>
     <div>
-        <a href="https://www.google.com" target="_blank">Search with Google</a>
+        <a href="https://www.google.com">Rechercher avec Google</a>
     </div>
     <div>
         <br>
