--- a/1a,b,c,d,e,g.html
+++ b/1a,b,c,d,e,g.html
@@ -14,7 +14,8 @@
     </div>
     <div>
         <p>Hello, world!</p>
-        <p>Aujourd'hui, je suis allé à l'épicerie acheter des œufs et des légumes.</p>
+
+        <p>Aujourd'hui, je suis allé faire des courses pour préparer la fête de korité.</p>
     </div>
     <div>
         <a href="https://www.google.com">Rechercher avec Google</a>
