--- a/3d,e.html
+++ b/3d,e.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Partie 3 création de zone de texte</title>
-    <link rel="stylesheet" href="3d.css">
+    <link rel="stylesheet" href="3d,e.css">
 </head>
 <body>
     <input type="text" class=" placeholder" placeholder="Rechercher">
